--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,52 @@
 
 body{
     /* fondo de la pagina*/
-    background-image: url(/ProyectoFinalUnidad1/Imagenes/24.jpg);
     background-size: contain;
-    max-width: 80%;
+    max-width: 100%;
     margin: auto;
-    font-family: 'Roboto', sans-serif;    
+    font-family: 'Roboto', sans-serif;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+
+.text{
+
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    background-color: #e2e3f3;
+
+}
+
+
+.text1{
+   width: 1000px;
+   margin: 50px;
+   padding-left: 50px;
+
+}
+
+.titulo1{
+
+   font-family: 'Fredoka One', cursive;
+   color: black;
+   font-size: 30px;
+   padding-bottom: 10px;
+  
+}
+
+
+.imagens2{
+
+   width: 80%;
+   height: 80%;
 }
 
 nav{
     float: right;
-    background-color: aliceblue;
+    background-color: #e2e3f3;
 }
 
 .menu {
@@ -38,12 +74,19 @@ a {
 
 h1{
     font-family: 'Merienda', cursive;
-    color: rgb(37, 37, 94);
-    font-size: 68px;    
+    color: #7375a5;
+    font-size: 68px;
+    margin-left: 100px;
+    text-decoration: none;    
 }
 
 span{
-    color: rgb(99, 218, 248);
+    color: #000503;
+}
+
+nav a{
+
+    text-decoration: none;
 }
 
 /* tamaño de imagen principal*/
@@ -73,14 +116,25 @@ p{
     font-family: 'Shadows Into Light', cursive;
     color: black;
     font-size: 25px;
+    
+}
+
+.parrafo {
+
     margin-top: 0;
     margin-bottom: 1rem;
+
+
 }
 
 dd{
     font-family: 'Fredoka One', cursive;
     color: black;
     font-size: 30px;
+    display: flex;
+    align-items: center;
+    margin-top: 1cm;
+    padding-left: 50px;
 }
 
 .listas{
@@ -95,11 +149,7 @@ dd{
     font-size: 25px;
 }
 
-h2{
-    font-family: 'Fredoka One', cursive;
-    color: orangered;
-    font-size: 90px; 
-}
+
 
 /* tcontacto has*/
 .contact-us {    
@@ -206,6 +256,7 @@ td{
 
 }
 
+
 .spread{
 
     transform: translate(0);
@@ -214,4 +265,92 @@ td{
     
     color: #fff;
     text-decoration: none;
+}
+
+.ico{
+
+    width: 100%;
+    height: 80%;
+    
+}
+
+.divicion {
+
+    display: flex;
+    height: 100%;
+    margin: 70px;
+    gap: 90px;
+    padding-left: 80px;
+    
+   
+    
+
+}
+.divicion2{
+
+    display: flex;
+    padding: 50px;
+    gap: 50px;
+    width: 90%;
+    margin: 50px;
+    padding-left: 110px;
+   
+    
+}
+
+.grid{
+
+    width: 300px;
+}
+
+
+.textos-hero {
+
+    background: #e2e3f3;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+    overflow: hidden;
+    height: 220px;
+    padding: 20px 10px;
+    text-align: center;
+
+}
+
+footer{
+    background: #414141;
+    padding: 60px 0 30px 0;
+    margin: 0;
+    overflow: hidden;
+    
+   
+}
+
+.contenedor-footer{
+    display: flex;
+    width: 90%;
+    justify-content: space-evenly;
+    margin: auto;
+    padding-bottom: 50px;
+    border-bottom: 1px solid #ccc;
+}
+
+.content-foo{
+    text-align: center;
+}
+
+.content-foo h2{
+    color: #fff;
+    border-bottom: 3px solid #af20d3;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+}
+
+.content-foo p{
+    color: #ccc;
+}
+
+.titulo-final{
+    text-align: center;
+    font-size: 24px;
+    margin: 20px 0 0 0;
+    color: #9e9797;
 }
