Co-authored-by: YURY HASBLEIDY ORJUELA ARANGO <yorjuel5@ibero.edu.co> complemento has

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ a {
 
 h1{
     font-family: 'Merienda', cursive;
-    color: #7375a5;
+    color: #50b343;
     font-size: 68px;
     margin-left: 100px;
     text-decoration: none;    
