--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ nav a{
 /* tamaño de imagen principal*/
 img{
     width: 100%;
-    height: 500px;
+    height: 80%;
 
 }
 
@@ -291,3 +291,44 @@ footer{
 }
 
 
+@media screen and (max-width: 800px){
+
+  
+   
+    
+    h1{
+      
+        font-size: 30px;
+        margin-left: 50px;
+       
+    }
+    .menu-navegacion{
+        
+        width: 40%;
+        
+    }
+    
+    
+    
+}
+
+@media screen and (max-width: 500px){
+
+     
+    h1{
+       
+        font-size: 30px;
+        margin-left: 50px;
+        
+    }
+
+    h4{
+        font-size: 30px;
+    }
+    .menu-navegacion{
+
+        width: 70%;
+        
+    }
+    
+}
