--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body{
     justify-content: space-evenly;
     width: 100%;
     background-color: #e2e3f3;
+    margin: 10px;
 
 }
 
@@ -82,6 +83,7 @@ h1{
 
 span{
     color: #000503;
+    font-family: 'Merienda', cursive;
 }
 
 nav a{
@@ -212,10 +214,10 @@ td{
 .divicion {
 
     display: flex;
-    height: 100%;
-    margin: 70px;
-    gap: 90px;
-    padding-left: 80px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
     
    
     
@@ -224,11 +226,10 @@ td{
 .divicion2{
 
     display: flex;
-    padding: 50px;
-    gap: 50px;
-    width: 90%;
-    margin: 50px;
-    padding-left: 110px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
    
     
 }
@@ -236,6 +237,8 @@ td{
 .grid{
 
     width: 300px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 
@@ -266,6 +269,9 @@ footer{
     margin: auto;
     padding-bottom: 50px;
     border-bottom: 1px solid #ccc;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .content-foo{
@@ -307,12 +313,26 @@ footer{
         width: 40%;
         
     }
+
+    .divicion{  
+        
+        width: 100%;
+
+
+    }
+
+    .divicion2{  
+        
+        width: 100%;
+
+
+    }
     
     
     
 }
 
-@media screen and (max-width: 500px){
+    @media screen and (max-width: 500px){
 
      
     h1{
@@ -329,6 +349,20 @@ footer{
 
         width: 70%;
         
+    }
+    
+    .divicion{  
+        
+        width: 100%;
+
+
+    }
+
+    .divicion2{  
+        
+        width: 100%;
+
+
     }
     
 }
