--- a/css/style.css
+++ b/css/style.css
@@ -373,5 +373,15 @@ footer{
 
 
     }
-   
+    .abs-center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+      }
+      
+      .form {
+        width: 450px;
+      }
+
 }
